# pytorch_warmup

./: .gitignore  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  manual_warmup.html  objects.inv  py-modindex.html  pyproject.toml  radam_warmup.html  search.html  searchindex.js  setup.cfg  setup.py  untuned_warmup.html
.github/workflows/: download-emnist.yml  example-cifar10.yml  example-emnist.yml  example-plots.yml  pythonpackage.yml  sphinx-gh-pages.yml
_modules/: index.html
_modules/pytorch_warmup/: base.html  radam.html  untuned.html
_sources/: index.rst.txt  manual_warmup.rst.txt  radam_warmup.rst.txt
docs/: build.sh  conf.py  gh-pages-redirect.html  index.rst  untuned_warmup.rst
examples/cifar10/: README.md  download.py  main.py  plot.py
examples/emnist/: README.md  download.py  main.py  plot.py
examples/plots/: README.md  effective_warmup_period.py  warmup_schedule.py
pytorch_warmup/: __init__.py  base.py  radam.py  untuned.py
test/: test_base.py  test_radam.py  test_untuned.py
